--- a/index.html
+++ b/index.html
@@ -1,57 +1,96 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MP English Trainer</title>
-    <meta name="description" content="Application de préparation aux concours MP - Anglais">
-    <meta name="theme-color" content="#2563eb">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50">
-    <div id="app">
-        <nav class="bg-white shadow-lg">
-            <div class="max-w-7xl mx-auto px-4">
-                <div class="flex justify-between items-center py-4">
-                    <h1 class="text-xl font-bold">MP English Trainer</h1>
-                    <div id="stats" class="text-sm text-gray-600">
-                        <span id="streak">Série: 0</span>
-                        <span class="mx-2">|</span>
-                        <span id="mastered">Maîtrisés: 0/0</span>
-                    </div>
-                </div>
-            </div>
-        </nav>
+<body class="bg-gray-100">
+    <div class="max-w-4xl mx-auto p-4">
+        <h1 class="text-2xl font-bold text-center mb-4">MP English Trainer</h1>
+        
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
+            <button onclick="showFlashcards()" class="p-4 bg-blue-500 text-white rounded-lg">Flashcards</button>
+            <button onclick="showQuiz()" class="p-4 bg-gray-200 rounded-lg">Quiz</button>
+            <button onclick="showExam()" class="p-4 bg-gray-200 rounded-lg">Épreuves</button>
+            <button onclick="showPhrases()" class="p-4 bg-gray-200 rounded-lg">Phrases</button>
+        </div>
 
-        <main class="max-w-7xl mx-auto px-4 py-6">
-            <div id="mode-selector" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
-                <button class="mode-btn active p-4 rounded-lg bg-blue-500 text-white" data-mode="flashcards">
-                    Flashcards
-                </button>
-                <button class="mode-btn p-4 rounded-lg bg-gray-200" data-mode="quiz">
-                    Quiz
-                </button>
-                <button class="mode-btn p-4 rounded-lg bg-gray-200" data-mode="exam">
-                    Épreuves
-                </button>
-                <button class="mode-btn p-4 rounded-lg bg-gray-200" data-mode="builder">
-                    Phrases
-                </button>
-            </div>
-
-            <div id="content" class="bg-white rounded-lg shadow-lg p-6">
-                <!-- Le contenu dynamique sera chargé ici -->
-                <div id="loading" class="text-center py-12">
-                    <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-500 mx-auto"></div>
-                    <p class="mt-4 text-gray-600">Chargement...</p>
-                </div>
-            </div>
-        </main>
+        <div id="content" class="bg-white p-6 rounded-lg shadow-lg">
+            <!-- Le contenu sera chargé ici -->
+        </div>
     </div>
 
-    <script src="app.js"></script>
+    <script>
+        // Données de base
+        const cards = [
+            { english: "nevertheless", french: "néanmoins", usage: "Nevertheless, this argument is valid." },
+            { english: "therefore", french: "par conséquent", usage: "Therefore, we must act now." },
+            { english: "however", french: "cependant", usage: "However, there are other factors to consider." }
+        ];
+
+        let currentCard = 0;
+        
+        // Fonctions de base
+        function showFlashcards() {
+            const content = document.getElementById('content');
+            displayCard(currentCard);
+        }
+
+        function displayCard(index) {
+            const card = cards[index];
+            const content = document.getElementById('content');
+            content.innerHTML = `
+                <div class="text-center">
+                    <div class="text-2xl font-bold mb-4">${card.english}</div>
+                    <button onclick="showAnswer(${index})" class="bg-blue-500 text-white px-4 py-2 rounded">
+                        Voir la réponse
+                    </button>
+                </div>
+            `;
+        }
+
+        function showAnswer(index) {
+            const card = cards[index];
+            const content = document.getElementById('content');
+            content.innerHTML = `
+                <div class="text-center">
+                    <div class="text-2xl font-bold mb-4">${card.english}</div>
+                    <div class="text-xl text-blue-600 mb-2">${card.french}</div>
+                    <div class="text-gray-600 mb-4">${card.usage}</div>
+                    <div class="flex justify-center gap-4">
+                        <button onclick="previousCard()" class="bg-gray-500 text-white px-4 py-2 rounded">Précédent</button>
+                        <button onclick="nextCard()" class="bg-gray-500 text-white px-4 py-2 rounded">Suivant</button>
+                    </div>
+                </div>
+            `;
+        }
+
+        function nextCard() {
+            currentCard = (currentCard + 1) % cards.length;
+            displayCard(currentCard);
+        }
+
+        function previousCard() {
+            currentCard = (currentCard - 1 + cards.length) % cards.length;
+            displayCard(currentCard);
+        }
+
+        function showQuiz() {
+            document.getElementById('content').innerHTML = '<div class="text-center">Quiz en développement</div>';
+        }
+
+        function showExam() {
+            document.getElementById('content').innerHTML = '<div class="text-center">Section épreuves en développement</div>';
+        }
+
+        function showPhrases() {
+            document.getElementById('content').innerHTML = '<div class="text-center">Construction de phrases en développement</div>';
+        }
+
+        // Initialisation
+        showFlashcards();
+    </script>
 </body>
 </html>
-
